$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.063
~~~~~~~~~~~~~~~~~

   o The "Guide Track" now synchronizes tracks and pattern changes independent
     from the "steps per measure" option


MIDIboxSEQ V4.062
~~~~~~~~~~~~~~~~~

   o fixed potential hard fault when storing preset pattern


MIDIboxSEQ V4.061
~~~~~~~~~~~~~~~~~

   o STM32: MBHP_ETH module working properly again


MIDIboxSEQ V4.060
~~~~~~~~~~~~~~~~~

   o fixed initialisation of MBHP_AOUT module

   o Song Mode now provides a "Guide Track" which can be configured
     by pressing SELECT in SONG page: the length of this track defines
     the loop length and once the last loop has been played, all tracks
     will be synchronized to step 1.
     This allows to program breaks with a step length which is independent
     from the measure.

   o Phrase Mode now syncs the pattern changes to the measure of SyncChange
     is set in the UTIL->OPT page

   o Phrase Mode manually triggers the "synch-to-measure" option for all tracks
     to ensure that all tracks are re-synchronized to step 1

   o MBSEQ_HW.V4 files: changed encoder mode to MIOS_ENC_MODE_DETENTED3
     since it's compatible with most encoders



MIDIboxSEQ V4.059
~~~~~~~~~~~~~~~~~

   o added Euclidean Rhythm Generator for drum and synth sequences.
     The page can be entered by pressing&holding SELECT in the edit menu -> GP16

   o fixed stack overflow which happened when incoming OSC messages were forwarded
     to OSC in Live mode (they are now automatically filtered to avoid feedback loops)

   o fixed group selection in BUTTON_DIRECT_TRACK1...16


MIDIboxSEQ V4.058
~~~~~~~~~~~~~~~~~

   o a new Pattern Remix feature has been implemented by Midilab.

     It's optimized for live sessions and got a special page:
        - pattern names can be previewed before they are selected
        - patterns change when the selection button is pressed a second time